<resources>
    <string name="app_name">Shoe Store</string>
    <string name="type_email">Type your e-mail:</string>
    <string name="email">E-mail</string>
    <string name="type_password">Your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_login">New login</string>
    <string name="add_shoe">Add shoe</string>
    <string name="instructions">Instructions</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="list_of_shoes">List of Shoes</string>
    <string name="welcome">Welcome</string>
    <string name="store_shoes">Store shoes</string>
    <string name="go_to_instruction">Go to instruction</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description:</string>
    <string name="shoe_size">Shoe size:</string>
    <string name="company">Company:</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="how_use">HOW USE</string>
    <string name="how_use_text">"1. The main screen will show all registered shoes.\n\n
2. To add a new shoe, simply go to the +1 floating button."</string>
    <string name="go_to_home">Go to Home</string>
    <string name="inputs_error">All fields must be filled</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="enter_password">Enter your password</string>
    <string name="logout">Logout</string>
</resources>
