<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="@color/colorAccent" />

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:gravity="center"
            android:text="@string/store_shoes"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/next_button"
            style="@style/ButtonPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="@dimen/default_margin"
            android:text="@string/go_to_instruction"
            app:layout_constraintBottom_toTopOf="@+id/create_button"
            app:layout_constraintEnd_toEndOf="@+id/create_button"
            app:layout_constraintStart_toStartOf="@+id/create_button"
            app:layout_constraintTop_toBottomOf="@+id/user_password" />
    </LinearLayout>

</layout>